--- a/index.html
+++ b/index.html
@@ -6,28 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moni Landing Page</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <nav>
-      <div class="brand">
-        <h2 class="brand-text"> Moni </h2>
-        <img src="" alt="" class="brand-img">
+      <div class="container">
+        <div class="row">
+          <div class="brand">
+            <h2 class="brand-text"> Moni </h2>
+            <img src="" alt="" class="brand-img">
+          </div>
+          <ul>
+            <li><a href="">Home </a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contacts </a></li>
+            <li><a href="">Blog </a></li>
+            <li><a href="">Account</a></li>
+          </ul>
+        </div>
       </div>
-      <ul>
-        <li><a href="">Home </a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Contacts </a></li>
-        <li><a href="">Blog </a></li>
-        <li><a href="">Account</a></li>
-      </ul>
     </nav>
+
     <section class="hero">
       <div class="container">
         <div class="row">
           <div class="left-column">
-            <h1 class="heading"> Welcome  </h1>
-            <p class="subheading">  Text about momi and it's repo blog  </p>
+            <h1 class="heading"> Welcome </h1>
+            <p class="subheading"> Text about momi and it's repo blog </p>
           </div>
           <div class="right-column">
             <img src="img/hero.jpg" alt="">
