--- a/index.html
+++ b/index.html
@@ -17,8 +17,24 @@
             <h2 class="brand-text"> Moni </h2>
             <img src="" alt="" class="brand-img">
           </div>
+          <label for="nav-checkbox" class="fries d-none">
+            <img src="img/menu-fries.svg" alt="">
+          </label>
           <ul>
-            <li><a href="">Home </a></li>
+            <li class="active"><a href="">Home </a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contacts </a></li>
+            <li><a href="">Blog </a></li>
+            <li><a href="">Account</a></li>
+          </ul>
+        </div>
+        <input type="checkbox" id="nav-checkbox" id="" hidden>
+        <div class="mobile-row">
+          <label for="nav-checkbox" class="">
+            <img src="img/close-white.svg" alt="">
+          </label>
+          <ul>
+            <li class="active" ><a href="">Home </a></li>
             <li><a href="">About</a></li>
             <li><a href="">Contacts </a></li>
             <li><a href="">Blog </a></li>
